--- a/source/scss/_header.scss
+++ b/source/scss/_header.scss
@@ -167,7 +167,8 @@ header {
 			+ label {
 				position: relative;
 				color: #acacac;
-				left: -210px;
+				left: 12px;
+				top: -48px;
 				font-size: 14px;
 			}
 			&:focus {
