--- a/source/jade/includes/head.jade
+++ b/source/jade/includes/head.jade
@@ -4,7 +4,7 @@ title #{title}
 meta(name='keywords', content='')
 meta(name='description', content='')
 
-meta(name='viewport', content='width=device-width, initial-scale=1')
+//-meta(name='viewport', content='width=device-width, height=device-height, initial-scale=1.0')
 
 link(rel='icon', type='image/png', href='i/favicon.png')
 link(rel='apple-touch-icon-precomposed', sizes='144x144' href='i/icons/apple-touch-icon-144x144-precomposed.png')
