--- a/source/jade/index.jade
+++ b/source/jade/index.jade
@@ -6,7 +6,7 @@ html(lang='ru').no-js
   head
     include includes/head
     //- Uncomment for LiveReload
-    //-| <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
+    <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
   body
     .page-wrap
       include includes/header
@@ -52,5 +52,29 @@ html(lang='ru').no-js
               i.fa.fa-angle-right
             a.specslider__nav.specslider__nav--prev(href='#')
               i.fa.fa-angle-left
-      include includes/footer
+        .container
+          .well-contacts
+            .social
+              a.vk(href="#") В
+              a.fb(href="#"): i.fa.fa-facebook
+              a.tw(href="#"): i.fa.fa-twitter
+            h1 Контактная информация
+            i.fa.fa-map-marker.fa-fw
+            h5 Адрес:
+            span г. Владивосток, ул Светланская 78б, оф 103
+            i.fa.fa-phone.fa-fw
+            h5 Телефон:
+            span 8 (423) 277-66-22, 277-66-22
+            i.fa.fa-envelope-o.fa-fw
+            h5 E-mail:
+            span: a(href="mailto:office@ecoluxpaper.ru") office@ecoluxpaper.ru
+          .form-contacts
+            h1 Отправить сообщение
+            form
+              fieldset
+                input(type="text", placeholder="Ваше имя")
+                input(type="text", placeholder="E-mail")
+                textarea(placeholder="Комментарий")
+                input(type="submit", value="Отправить сообщение")
+        include includes/footer
     include includes/tail
