--- a/source/scss/app.scss
+++ b/source/scss/app.scss
@@ -59,19 +59,29 @@ a[href^=tel]{
 	overflow: hidden;
 }
 
-h1, h2, h3, h4 {
-	//color: $blue-color;
+h1, h2, h3, h4, h5, p {
 	color: #000;
-	font-weight: 200;
-	margin-bottom: 30px;
+	margin-bottom: 18px;
+}
+
+h1, h2, h3, h4, h5 {
+	font-weight: bold;
 }
 
 h1 {
-	font-size: 30px;
+	font-size: 24px;
+}
+
+h2 {
+	font-size: 20px;
+}
+
+h3 {
+	font-size: 16px;
 }
 
 p {
-	line-height: 120%;
+	line-height: 1.2;
 }
 
 strong {
