--- a/source/jade/index.jade
+++ b/source/jade/index.jade
@@ -6,7 +6,7 @@ html(lang='ru').no-js
   head
     include includes/head
     //- Uncomment for LiveReload
-    <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
+    //- <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
   body
     .page-wrap
       include includes/header
