--- a/source/scss/_else.scss
+++ b/source/scss/_else.scss
@@ -1,7 +1,329 @@
+#map {
+	width: 460px;
+	height: 274px;
+	margin-bottom: 18px;
+}
+
+.cat-item {
+	@include col(1/4, $cycle: 4);
+	text-align: center;
+	margin-bottom: 40px;
+	a {
+		display: block;
+		text-decoration: none;
+		&:hover {
+			opacity: 0.8;
+		}
+		img {
+			margin-bottom: 5px;
+		}
+		h5 {
+			line-height: 1.2;
+		}
+	}
+}
+
+blockquote {
+	display: block;
+	position: relative;
+	color: #656565;
+	font-size: 14px;
+	font-style: italic;
+	padding-left: 50px !important;
+	p:before {
+		display: block;
+		position: absolute;
+		left: -45px;
+		top: -7px;
+		content: '\201C';
+		font-size: 60px;
+		line-height: 60px;
+		color: #000;
+		font-style: italic;
+	}
+	
+	p {
+		position: relative;
+		color: #656565;
+	}
+
+	img {
+		@include border-radius(1000px);
+	}
+}
+
+.col-8-12 {
+	@include col(8/12);
+}
+
+.col-4-12 {
+	@include col(4/12);
+}
+
+.well {
+	padding: 45px;
+	background-color: #FCFAE9;
+	margin-bottom: 50px;
+}
+
+.col-1-2.item__images {
+	a {
+		display: block;
+		float: left;
+		width: 300px;
+		height: 300px;
+		border: 1px solid #e1e1e1;
+		background-color: #fff;
+		overflow: hidden;
+		position: relative;
+
+		&.item__image--main:after {
+			display: block;
+			content:"\f00e";
+			position: absolute;
+			bottom: 7px; right: 7px;
+			width: 19px; height: 19px;
+			background-color: #629811;
+			font-family: FontAwesome;
+			color: #FFF;
+			font-size: 12px;
+			line-height: 19px;
+			text-align: center;
+
+			font-style: normal;
+			font-weight: normal;
+			-webkit-font-smoothing: antialiased;
+			-moz-osx-font-smoothing: grayscale;
+		}
+
+		&:hover {
+			opacity: 0.8;
+		}
+
+		&.item__image--small {
+			width: 140px;
+			height: 140px;
+			margin-top: 20px;
+			&:nth-child(2n) {
+				margin-right: 20px;
+			}
+		}
+	}
+}
+
+.col-1-2.item__description {
+
+}
+
+.pagination {
+	ul {
+		li {
+			list-style: none;
+			list-style-image: none;
+			float: left;
+			margin-right: 10px;
+			a {
+				text-decoration: none;
+				display: block;
+				width: 30px; height: 30px;
+				line-height: 30px;
+				text-align: center;
+				@include border-radius(100px);
+				border: 1px solid transparent;
+			}
+			&.active a, & a:hover {
+				border-color: #dedede;
+			}
+		}
+	}
+}
+
+.cf {
+	@include cf;
+}
+
+.col-1-2 {
+	@include col(1/2);
+}
+
+.breadcrumbs {
+	margin-bottom: 30px;
+	display: block;
+	@include cf;
+	ul {
+		margin: 0;
+		padding: 0 !important;
+		li {
+			margin: 0; padding: 0;
+			list-style: none;
+			float: left;
+			margin-right: 24px;
+			position: relative;
+			&:last-child {
+				&:after {
+					display: none;
+				}
+			}
+			&:after {
+				display: block;
+				content: '\2192';
+				position: absolute;
+				top: 0; right: -20px;
+			}
+			a {
+				color: #699b11;
+				text-decoration: underline;
+				&:hover {
+					color: lighten(#699b11, 5%);
+				}
+			}
+		}
+	}
+}
+
+table {
+
+	border-collapse: collapse;
+	width:100%;
+	height:100%;
+	margin-bottom: 18px;
+	padding:0px;
+	font-size: 14px;
+	font-weight: 200;
+	display: table !important;
+
+    @include inner-table-borders(1px, #E1E1E1);
+    @include outer-table-borders(1px, #E1E1E1);
+
+	th {
+		background-color: #629811;
+		color: #FFF;
+		padding: 10px;
+		font-weight: bold;
+		font-size: 14px;
+		@include inner-table-borders(1px, #629811);
+    	@include outer-table-borders(1px, #629811);
+	}
+
+	th:first-child {
+	  border-right: 1px solid #629811;
+	}
+
+	tr {
+
+		td {
+			background-color: #fff;
+			padding: 10px;
+		}
+
+		&:nth-child(2n+1) {
+			td {
+				background-color: #fff;
+			}
+		}
+	}
+
+	&.search__results {
+		border: none;
+		font-size: 14px;
+		line-height: 1.1;
+
+		tr:nth-child(2n+1) {
+			td {
+				background-color: #FAFAFA;
+			}
+		}
+
+		td {
+			padding-top: 30px;
+			&.table__image {
+				padding: 20px 0;
+				vertical-align: middle;
+			}
+		}
+
+		tr:first-child th {
+		  border-top: 0;
+		}
+		tr:last-child td {
+		  border-bottom: 0;
+		}
+		tr td:first-child {
+		  border-left: 0;
+		}
+		tr td:last-child,
+		tr th:last-child {
+		  border-right: 0;
+		}
+	}
+}
+
+.content {
+	ul {
+		list-style-type: disc;
+		list-style-image: url('../i/list.png');
+		padding-left: 14px;
+		margin-bottom: 18px;
+	}
+	ol {
+		list-style-type: decimal;
+		padding-left: 22px;
+		margin-bottom: 18px;
+	}
+	@include col(8/12);
+	.container {
+		width: 620px;
+	}
+}
+
+aside {
+	@include col(4/12);
+	width: 260px;
+	@include border-radius(20px);
+	@include background-clip(padding-box);
+	background-color: #699b11;
+	color: #FFF;
+	padding: 32px 0;
+	min-height: 390px;
+	margin-right: 60px;
+	
+	h2 {
+		color: #fff;
+		font-size: 20px;
+		font-weight: bold;
+		@include text-shadow(0 1px 0 #456f09);
+		padding: 0 32px;
+		margin-bottom: 15px;
+	}
+
+	ul {
+		li {
+			&:first-child a:hover, &:first-child a.active {
+				border-top: 1px solid #4F710C;
+			}
+			a {
+				display: block;
+				color: #FFF;
+				text-decoration: none;
+				@include text-shadow(0 1px 0 #456f09);
+				padding: 13px 32px;
+				border-top: 1px solid #91B453;
+				border-bottom: 1px solid #4F710C;
+			}
+			&:hover a, &.active a {
+				color: #FFF;
+				background-color: #699b11;
+				@include box-shadow(inset 0 0 27px rgba(0,0,0,.23));
+				border-top: 1px solid transparent;
+			}
+		}
+	}
+}
+
 main {
 	background-color: #fdfdfd;
 	@include background-image(linear-gradient(to bottom, #efe9e5 0%, #fff 100%));
-	padding-top: 60px;
+	padding-top: 100px;
 }
 
 .form-contacts {
@@ -23,6 +345,12 @@ main {
 	padding: 60px 48px;
 	padding-bottom: 40px;
 	position: relative;
+
+	&.well-contacts--full {
+		display: block;
+		width: 100%;
+		margin-top: 80px;
+	}
 
 	.social {
 		position: absolute;
@@ -78,6 +406,8 @@ main {
 		display: inline-block;
 		font-size: 16px;
 		font-weight: bold;
+		color: #FFF;
+		margin-bottom: inherit;
 	}
 	span {
 		display: block;
