--- a/source/scss/_header.scss
+++ b/source/scss/_header.scss
@@ -9,7 +9,8 @@ header {
 		height: 74px;
 		border: 1px solid #5d8e10;
 		background-color: #589313;
-		margin-top: 30px;
+		margin-top: 15px;
+		//margin-bottom: 60px;
 		position: relative;
 		@include border-radius(38px);
 		@include background-clip(padding-box);
