Opera 12 fixes, IE8 fixes, other fixes

--- a/source/jade/includes/header.jade
+++ b/source/jade/includes/header.jade
@@ -1,7 +1,7 @@
 header
 	.container
 		a.header__logo(href="/")
-			img(src="i/logo.svg", onerror="this.onerror=null; this.src='i/logo.png'")
+			img(src="i/logo.svg", width="273", height="73", onerror="this.onerror=null; this.src='i/logo.png'")
 		.header__search
 			form
 				input#search(type="text", placeholder="Поиск по сайту")
