--- a/source/jade/includes/slider.jade
+++ b/source/jade/includes/slider.jade
@@ -13,21 +13,21 @@
 					img.slider__image(src="i/slide-1.png")
 					.slider__content
 						h1 Универсальная бумага 
-						h2 для повседневной работы в офисе
+						h2 для повседневной работы в офисе2
 						.slider__icons
 							img(width="246", height="43", src="i/slider_icons.svg", onerror="this.onerror=null; this.src='i/slider_icons.png'")
 				li.slider__item
 					img.slider__image(src="i/slide-1.png")
 					.slider__content
 						h1 Универсальная бумага 
-						h2 для повседневной работы в офисе
+						h2 для повседневной работы в офисе3
 						.slider__icons
 							img(width="246", height="43", src="i/slider_icons.svg", onerror="this.onerror=null; this.src='i/slider_icons.png'")
 				li.slider__item
 					img.slider__image(src="i/slide-1.png")
 					.slider__content
 						h1 Универсальная бумага 
-						h2 для повседневной работы в офисе
+						h2 для повседневной работы в офисе4
 						.slider__icons
 							img(width="246", height="43", src="i/slider_icons.svg", onerror="this.onerror=null; this.src='i/slider_icons.png'")
 			a.slider__nav.slider__nav--next(href='#')
