--- a/source/scss/_slider.scss
+++ b/source/scss/_slider.scss
@@ -8,9 +8,14 @@
 		.container {
 			height: 100%;
 		}
-		.slider__container {
-			.slider__item {
+		ul.slider__container {
+			display: block;
+			position: relative;
+			height: 420px;
+			li.slider__item {
 				position: relative;
+				width: 100%;
+				height: 100%;
 				display: none;
 				img.slider__image {
 					width: auto;
@@ -19,13 +24,15 @@
 					left: -225px;
 				}
 				.slider__content {
-					position: relative;
+					position: absolute;
 					top: 160px; left: 350px;
 					width: 550px;
 					h1 {
 						font-size: 36px;
 						margin-bottom: 13px;
 						font-weight: bold;
+						line-height: 1px;
+						margin-bottom: 25px;
 					}
 					h2 {
 						font-size: 30px;
@@ -87,7 +94,7 @@
 					height: 18px;
 					@include border-radius(100px);
 					@include background-clip(padding-box);
-					background-color: #fff;
+					background-color: #fbfdfb;
 					@include box-shadow(0 2px 3px rgba(0,1,0,.6), inset 0 -1px 3px rgba(109,162,63,.6));
 					@include background-image(linear-gradient(to bottom, #fbfdfb 0%, #c5ddc1 100%));
 				}
@@ -96,6 +103,7 @@
 						top: 2px; left: 2px;
 						width: 20px;
 						height: 20px;
+						background-color: #ffe3a1;
 						@include box-shadow(0 2px 3px rgba(0,1,0,.3), inset 0 -1px 3px rgba(194,155,112,.6));
 						@include background-image(linear-gradient(to bottom, #ffe3a1 0%, #e16909 100%));
 					}
