--- a/source/jade/includes/footer.jade
+++ b/source/jade/includes/footer.jade
@@ -4,3 +4,10 @@ footer
 		.right
 			img.logo-iastudio(src="i/iastudio-logo.svg", onerror="this.onerror=null; this.src='i/iastudio-logo.png'")
 			|Создание сайта — студия «<a href="http://iastudio.ru" target="_blank">Интерактив</a>»
+#callback-form.modal
+	h5 Обратный звонок
+	form
+		fieldset
+			input(type="text", placeholder="Ваше имя")
+			input(type="tel", placeholder="Телефон")
+			input(type="submit", value="Отправить")
