--- a/source/jade/includes/header.jade
+++ b/source/jade/includes/header.jade
@@ -10,7 +10,7 @@ header
 		.header__contacts
 			span Справки по телефону:
 			h1 8 (423) 290 65 47
-			a(href="#")
+			a(href="#callback-form", rel="modal:open")
 				i.fa.fa-undo.fa-fw
 				|Обратный звонок
 	.container
